[package]
name = "tributary-chain"
version = "0.1.0"
description = "A micro-blockchain to provide consensus and ordering to P2P communication"
license = "AGPL-3.0-only"
repository = "https://github.com/serai-dex/serai/tree/develop/coordinator/tributary"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"

[dependencies]
async-trait = "0.1"
lazy_static = "1"
thiserror = "1"

subtle = "^2"
zeroize = "^1.5"

rand = "0.8"
rand_chacha = "0.3"

blake2 = "0.10"
transcript = { package = "flexible-transcript", path = "../../crypto/transcript", features = ["recommended"] }

ciphersuite = { package = "ciphersuite", path = "../../crypto/ciphersuite", features = ["ristretto"] }
schnorr = { package = "schnorr-signatures", path = "../../crypto/schnorr" }

hex = "0.4"
log = "0.4"

serai-db = { path = "../../common/db" }

scale = { package = "parity-scale-codec", version = "3", features = ["derive"] }
futures = "0.3"
tendermint = { package = "tendermint-machine", path = "./tendermint" }

tokio = { version = "1", features = ["sync", "time", "rt"] }

[features]
tests = []
