[package]
name = "ciphersuite"
version = "0.1.1"
description = "Ciphersuites built around ff/group"
license = "MIT"
repository = "https://github.com/serai-dex/serai/tree/develop/crypto/ciphersuite"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["ciphersuite", "ff", "group"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rand_core = "0.6"

zeroize = { version = "1.5", features = ["zeroize_derive"] }
subtle = "2"

digest = "0.10"
sha2 = { version = "0.10", optional = true }
sha3 = { version = "0.10", optional = true }

ff = { version = "0.12", features = ["bits"] }
group = "0.12"

dalek-ff-group = { path = "../dalek-ff-group", version = "^0.1.2", optional = true }

elliptic-curve = { version = "0.12", features = ["hash2curve"], optional = true }
p256 = { version = "0.11", features = ["arithmetic", "bits", "hash2curve"], optional = true }
k256 = { version = "0.11", features = ["arithmetic", "bits", "hash2curve"], optional = true }

minimal-ed448 = { path = "../ed448", version = "^0.1.2", optional = true }

[dev-dependencies]
ff-group-tests = { version = "0.12", path = "../ff-group-tests" }

[features]
std = []

dalek = ["sha2", "dalek-ff-group"]
ed25519 = ["dalek"]
ristretto = ["dalek"]

kp256 = ["sha2", "elliptic-curve"]
p256 = ["kp256", "dep:p256"]
secp256k1 = ["kp256", "k256"]

ed448 = ["sha3", "minimal-ed448"]

default = ["std"]
