[package]
name = "composable-curve"
version = "0.12.0"
description = "Sugar around ff/group"
license = "MIT"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"

[dependencies]
thiserror = { version = "1", optional = true }

zeroize = "1.3"

ff = { version = "0.12", features = ["bits"] }
group = "0.12"

[features]
std = []
serialize = ["std", "thiserror"]
